added text area to form

--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -15,7 +15,7 @@
         h4 {color: firebrick; text-align: left}
         footer{text-align: center; font-family: sans-serif;}
         iframe{align-items: center}
-        form {width:50%; background-color: lightsalmon; margin-left: auto; margin-right: auto; font-family: sans-serif; text-align: left; border: 3px black; padding: 50px}
+        form {width:50%; background-color: lightsalmon; margin-left: auto; margin-right: auto; font-family: sans-serif; text-align: left; border: 3px black; padding: 25px}
 
       </style>
   </head>
@@ -26,7 +26,7 @@
       <input type="radio" name="plan" value="Yes" /> yes
       <br/>
       <input type="radio" name="plan" value="No" /> no
-
+      <br/>
     <p>How old are you?</p>
       <input type="radio" name="age" value="Under 18" /> under 18
         <br/>
@@ -39,6 +39,19 @@
       <input type="radio" name="age" value="51-65" /> 51-65
         <br/>
       <input type="radio" name="age" value="66 or older" /> over 65
+        <br/>
+    <p>Gender</p>
+      <select name="Gender">
+        <option value="Fe">Female</option>
+        <option value="Ma">Male</option>
+        <option value="NA">Prefer not to answer</option>
+      </select>
+      <br/>
+    <p>What was your favorite part of this website?</p>
+      <textarea name"comments" id="textarea">Enter up to 500 characters...</textarea>
+
+
+
     </form>
   </body>
   <footer>
