adjust text area

--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -48,7 +48,7 @@
       </select>
       <br/>
     <p>What was your favorite part of this website?</p>
-      <textarea name"comments" id="textarea">Enter up to 500 characters...</textarea>
+      <textarea name"comments" id="textarea" width:400 height:300 style="font-family: sans-serif">Enter up to 500 characters...</textarea>
 
 
 
