Added submit button

--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -16,7 +16,7 @@
         footer{text-align: center; font-family: sans-serif;}
         iframe{align-items: center}
         form {width:50%; background-color: lightsalmon; margin-left: auto; margin-right: auto; font-family: sans-serif; text-align: left; border: 3px black; padding: 25px}
-        textarea {width: 400; height: 300; font-family: sans-serif;}
+        textarea {font-family: sans-serif;}
       </style>
   </head>
   <body>
@@ -48,11 +48,9 @@
       </select>
       <br/>
     <p>What was your favorite part of this website?</p>
-      <textarea name"comments" id="textarea">Enter up to 500 characters...</textarea>
+      <textarea name"comments" id="textarea" rows="4" cols="10">Enter up to 500 characters...</textarea>
       <br/>
-
-
-
+      <input type="submit" name="submit" value="submit"/>
     </form>
   </body>
   <footer>
