last minute additions

--- a/project2/index.html
+++ b/project2/index.html
@@ -97,6 +97,6 @@
   <br>
   <footer>
       <a href="./pages/about.html">About Me</a> <br>
-      <a href="./pages/contacts.html">Contact</a>
+      <a href="./pages/contacts.html">Questionnaire</a>
   </footer>
 </html>
