--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -30,7 +30,7 @@
     </p>
       <br>
     <p style="font-family: sans-serif; text-align: center">
-      <b>When cooking we love to listen to music. A favorite artist in our house is Weezer. If you need something to get you started while <br>
+      <b>When cooking we love to listen to music and dance, although we are not very good at the latter. A favorite artist in our house is Weezer. If you need something to get your booty shaking while <br>
       you cook here is a good place to start:</b>
     </p>
         <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241837348&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
@@ -56,6 +56,6 @@ with the University of Montana, School of Media Arts.&#169;
   </body>
   <footer>
     <a href="../index.html">Home</a> <br>
-    <a href="./contacts.html">Contact</a>
+    <a href="./contacts.html">Questionnaire</a>
   </footer>
 </html>
