Appeasing the Linter Gods

--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-      <title>Behind the Magic</title>
+      <title>About Me</title>
       <meta charset="utf-8">
       <meta name="description" content="About Us">
       <meta name="author" content="Jordan Patterson">
@@ -27,15 +27,18 @@
       This quick recipe has been a go-to recipe of mine for many years, <br>
       I usually serve them every Thanksgiving and they are always a big hit. This recipe is from <cite>rachael ray every day</cite>. For
       more recipes click <a href="https://www.rachaelraymag.com/">here</a>.</b>
+    </div>
     </p>
       <br>
+    <div class="About Me" id="Music Paragraph">
     <p style="font-family: sans-serif; text-align: center">
       <b>When cooking we love to listen to music and dance, although we are not very good at the latter. A favorite artist in our house is Weezer. If you need something to get your booty shaking while <br>
       you cook here is a good place to start:</b>
     </p>
-        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241837348&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     </div>
-  </p>
+
+<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241837348&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+
 
   <p style="font-family: sans-serif; text-align: center">
     This webpage was produced for the class Introduction to Web Design & Development <br>
