--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -16,13 +16,13 @@
         footer{text-align: center; font-family: sans-serif;}
         iframe{align-items: center}
         form {width:50%; background-color: lightsalmon; margin-left: auto; margin-right: auto; font-family: sans-serif; text-align: left; border: 3px black; padding: 25px}
-        textarea {font-family: sans-serif;}
+        textarea {font-family: sans-serif}
       </style>
   </head>
   <body>
     <h1>Questionnaire</h1>
     <form action="http://www.example.com/subscribe.php" method="get">
-    <p>Do you plan on making this recipe?</P>
+    <p>Do you plan on making this recipe?</p>
       <input type="radio" name="plan" value="Yes" /> yes
       <br/>
       <input type="radio" name="plan" value="No" /> no
@@ -48,7 +48,7 @@
       </select>
       <br/>
     <p>What was your favorite part of this website?</p>
-      <textarea name"comments" id="textarea" rows="10" cols="50">Enter up to 500 characters...</textarea>
+      <textarea name="comments" id="textarea" rows="10" cols="50">Enter up to 500 characters...</textarea>
       <br/>
       <input type="submit" name="submit" value="submit"/>
     </form>
