--- a/project2/index.html
+++ b/project2/index.html
@@ -22,13 +22,7 @@
           padding: 10px}
         blockquote{text-align: center}
         footer{text-align: center; font-family: sans-serif;}
-
-
-
-
-
       </style>
-
   </head>
   <body>
     <br>
@@ -41,7 +35,7 @@
     <div>
       <p style="font-family: sans-serif; text-align: center">
         <b>This is a recipe for Potato Bites. They are simple, delicious, and look great on a serving tray. They are sure to impress your friends and family.</b>
-      </P>
+      </p>
     </div>
         <br>
         <br>
@@ -62,9 +56,10 @@
       <br>
     <div id="instructions">
 
-<table style="width:50%"; style="background-color: darkorange"; align="center">
+<table style="width:50%" align="center">
 <tr>
   <th colspan="3"><h1>Instructions</h1></th>
+</tr>
 <tr>
   <th scope="row">Step 1</th>
     <td>Preheat the oven to 375<sup>o</sup> . Place the potato rounds on a rimmed baking<br>
@@ -87,7 +82,7 @@
     <td> <img src="./images/potatopic2.jpg" alt="Image of Potato Bites" height="200" width="200" /></td>
 </tr>
 </table>
-  <a href="#ingredients"; style="font-family: sans-serif"><center>Ingredients</center></a>
+  <a href="#ingredients" style="font-family: sans-serif"><center>Ingredients</center></a>
   </div>
   <div>
     <p style="font-family: sans-serif; text-align: center"> <b>This is a great recipe to include little helpers, especially when it comes to assembling the potato bites.</b></p>
