--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -32,7 +32,7 @@
       <br>
     <div class="About Me" id="Music Paragraph">
     <p style="font-family: sans-serif; text-align: center">
-      <b>When cooking we love to listen to music and dance, although we are not very good at the latter. A favorite artist in our house is Weezer. If you need something to get your booty shaking while <br>
+      <b>When cooking we love to listen to music and dance, although we are not very good at the latter. A favorite artist in our house is Weezer. If you need something to get your booty shaking while
       you cook here is a good place to start:</b>
     </p>
     </div>
