--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -7,6 +7,8 @@
       <meta name="author" content="Jordan Patterson">
       <meta name="keywords" content="1960, 1960's, 1960s, color, design, decade of color exploration, WebDev, Web Development">
       <meta name="viewport" content="width=device-width, intial-scale=1.0">
+      <link rel="stylesheet" type="text/css" href="./css/style.css"/>
+
   </head>
   <body>
   </body>
