--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -9,9 +9,14 @@
       <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
+    <style>
+      *{font-family: sans-serif}
+      #date{color: darkblue; text-align: left}
+    </style>
+
   </head>
   <body>
-    <div class="main-container">
+    <div class="main-container" id="date">
       <h1>1960's</h1>
     </div>
 
