--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -10,8 +10,7 @@
       <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
     <style>
-      *{font-family: sans-serif}
-      #date{color: darkblue; text-align: left}
+      {background-color: darkorange}
     </style>
 
   </head>
