--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -10,7 +10,9 @@
       <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
     <style>
-      {background-color: darkorange}
+    {*font-family: sans-serif}
+    #date{font-size: 15pt; color: darkblue; text-align: left}
+    {background-color: darkorange}
     </style>
 
   </head>
