--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -10,9 +10,10 @@
       <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
     <style>
+      body{background-color: darkorange}
     {*font-family: sans-serif}
-    #date{font-size: 15pt; color: darkblue; text-align: left}
-    {background-color: darkorange}
+    #date{font-size: 15pt; color: darkblue; text-align: left; font-weight: bold}
+
     </style>
 
   </head>
