added second container

--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -11,15 +11,16 @@
 
     <style>
       body{background-color: darkorange}
-    {*font-family: sans-serif}
-    #date{font-size: 15pt; color: darkblue; text-align: left; font-weight: bold}
-
+    *{font-family: sans-serif; color: white; text-align: left; font-style: italic}
     </style>
 
   </head>
   <body>
     <div class="main-container" id="date">
       1960's
+    </div>
+    <div class="second-container">
+      Can you dig it?
     </div>
 
   </body>
