styling of second container

--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -19,7 +19,7 @@
     <div class="main-container" id="date">
       1960's
     </div>
-    <div class="second-container">
+    <div class="second-container.inner">
       Can you dig it?
     </div>
 
