inner box complete

--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -11,15 +11,16 @@
 
     <style>
       body{background-color: darkorange}
-    *{font-family: sans-serif; color: white; text-align: left; font-style: italic}
+    *{font-family: sans-serif; color: darkblue; text-align: left; font-style: italic; font-size: 40px; font-weight: bold}
+
     </style>
 
   </head>
   <body>
-    <div class="main-container" id="date">
+    <div class="box1">
       1960's
     </div>
-    <div class="second-container.inner">
+    <div class="box1 inner">
       Can you dig it?
     </div>
 
