--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -23,6 +23,9 @@
     <div class="box1 inner">
       Can you dig it?
     </div>
+    <div class="box2">
+      Gimme some skin
+    </div>
 
   </body>
   <footer>
