--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -26,8 +26,8 @@
     <div class="box2">
       Gimme some skin
     </div>
-    <div>
-      <img src=".images/1960s.png" alt="1960s design" height="500" width="100" margin-right="80">
+    <div class="imagebox">
+      <img src="./images/1960s.png" alt="1960s design" height="500" width="100" margin-right="100">
     </div>
   </body>
   <footer>
