--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -12,19 +12,20 @@
     <style>
       body{background-color: darkorange}
     *{font-family: sans-serif; color: darkblue; text-align: left; font-style: italic; font-size: 40px; font-weight: bold}
+    p em{text-decoration: underline; color: ghostwhite}
 
     </style>
 
   </head>
   <body>
     <div class="box1">
-      1960's
+      <img src="./images/pop602.jpg" alt="pop art" height="150" width="125">
     </div>
     <div class="box1 inner">
       Can you dig it?
     </div>
     <div class="box2">
-      Gimme some skin
+      <p>Gimme some <em>skin</em>!</p>
     </div>
     <div class="imagebox">
       <img src="./images/1960s.png" alt="1960s design" height="500" width="200" margin-right="100">
