--- a/assignment7/index.html
+++ b/assignment7/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
   <head>
-      <title>Iconic 1960's</title>
+      <title>Titanic</title>
       <meta charset="utf-8">
-
       <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="./css/fonts.css">
       <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -13,4 +12,16 @@
         *{font-family: sans-serif; color: darkblue; text-align: left; font-style: italic; font-size: 40px; font-weight: bold}
       </style>
     </head>
-    
+    <body>
+      <h1>The New York Times</h1>
+      <h2>April 16, 1912</h2>
+
+      <div class="">
+        <h2>Titanic Sinks Four Hours After Hitting Iceberg; <br/>
+          866 Rescued by Carpathia, Probably 1,250 Perish; <br/>
+          Ismay Safe, Mrs. Astor Maybe, Noted Names Missing</h2>
+          
+
+      </div>
+
+    </body>
