--- a/assignment7/index.html
+++ b/assignment7/index.html
@@ -5,23 +5,50 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="./css/fonts.css">
-      <link rel="stylesheet" type="text/css" href="./css/style.css">
+      <link rel="stylesheet" type="text/css" href="./css/styles.css">
       <style>
-        body{background-color: navy}
-        p em{text-decoration: underline; color: ghostwhite}
-        *{font-family: sans-serif; color: darkblue; text-align: left; font-style: italic; font-size: 40px; font-weight: bold}
+        *{font-family: Times; line-height: normal; letter-spacing: normal; text-indent: 40px}
       </style>
     </head>
     <body>
+      <div id="body" class="container">
+
+      <div class="header1">
       <h1>The New York Times</h1>
       <h2>April 16, 1912</h2>
+      <h3>Special To the New York Times<h3>
+      </div>
 
-      <div class="">
+
         <h2>Titanic Sinks Four Hours After Hitting Iceberg; <br/>
           866 Rescued by Carpathia, Probably 1,250 Perish; <br/>
           Ismay Safe, Mrs. Astor Maybe, Noted Names Missing</h2>
+
+      <hr>
+
+      <div class="article">
+      <p> BOST, April 15. -- A wireless message picked up late to-night, replayed from the Olympic, says that the Carpathia is on her way to New York with 866 passengers from the steamer Titanic aboard. They are mostly women and children, the message said, and it concluded: "Grave fears are felt for the safety of the balance of the passengers and crew." </p>
+
+
+      <p> CAPE RACE, N.F., April 15. -- The White Star liner Olympic reports by wireless this evening that the Cunarder Carpathia reached, at daybreak this morning, the position from which wireless calls for help were sent out last night by the Titanic after her collision with an iceberg. The Carpathia found only the lifeboats and the wreckage of what had been the biggest steamship afloat. </p>
+
+      <p> The Titanic had foundered at about 2:20 A.M., in latitude 41:46 north and longitude 50:14 west. This is about 30 minutes of latitude, or about 34 miles, due south of the position at which she struck the iceberg. All her boats are accounted for and about 655 souls have been saved of the crew and passengers, most of the latter presumably women and children. There were about 1,200 persons aboard the Titanic.</p>
+
+      <p>The Leyland liner California is remaining and searching the position of the disaster, while the Carpathia is returning to New York with the survivors.</p>
+
+      <p>It can be positively stated that up to 11 o'clock to-night nothing whatever had been received at or heard by the Marconi station here to the effect that the Parisian, Virginian or any other ships had picked up any survivors, other than those picked up by the Carpathia.</p>
+      </div>
+
+      <div class="button">
+        <form action="https://archive.nytimes.com/www.nytimes.com/learning/general/onthisday/big/0415.html">
           
+        </form>
+
 
       </div>
+
+      </div>
+
+
 
     </body>
