--- a/assignment8/index.html
+++ b/assignment8/index.html
@@ -4,6 +4,10 @@
     <title>Assignment 8</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <style>
+      *{text-align: centers}
+    </style>
   </head>
   <body>
   </body>
