Added first couple of pictures and some headings

--- a/assignment8/index.html
+++ b/assignment8/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <style>
-      *{text-align: centers}
+      *{text-align: center}
+      *{background: #FDFDF1}
     </style>
   </head>
   <body>
+    <nav id="heading1">Oh-h-h! <u>What</u> a <br/>VACUUM CLEANER!</nav>
+    <left>
+      <div class="woman"><img src="images/woman.png" width="300"></div>
+    </left>
+    <nav id="queenblock">Filter Queen</nav>
+    <nav id="bagless">The BAGLESS vacuum cleaner</nav>
+    <nav id="honest">Honest!</nav>
+    <nav id="nobag"><img src="images/icon-inside.png" width="170"></nav>
+
   </body>
 </html>
