--- a/assignment8/index.html
+++ b/assignment8/index.html
@@ -2,13 +2,9 @@
 <html>
   <head>
     <title>Assignment 8</title>
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    <style>
-      *{text-align: center}
-      *{background: #FDFDF1}
-    </style>
+
   </head>
   <body>
     <nav id="heading1">Oh-h-h! <u>What</u> a <br/>VACUUM CLEANER!</nav>
@@ -17,8 +13,48 @@
     </left>
     <nav id="queenblock">Filter Queen</nav>
     <nav id="bagless">The BAGLESS vacuum cleaner</nav>
-    <nav id="honest">Honest!</nav>
-    <nav id="nobag"><img src="images/icon-inside.png" width="170"></nav>
+    <nav id="honest">Honest !</nav>
+    <nav id="honesttext">NO messy bag or cloth fil-<br/>ter inside!</nav>
+    <nav id="glory">Glory Be !</nav>
+    <nav id="glorytext">NO dust laden bag out-<br/>side!</nav>
+    <nav id="whee">Whee-e-e!</nav>
+    <nav id="wheetext">No bag at all. Empties like a wastebasket. Large
+      metal container holds all the dirt from a month's cleaning. What a vacuum my
+      my FILTER QUEEN is!</nav>
+    <nav id="patent">Fully Protected by<br/>U.S. Patents</nav>
+    <div class="presenting">
+      <p>PRESENTING... the easiest-to-use vacuum imaginable! No heavy weight to push... no bag to leak dust! Your FILTER QUEEN zips up surface litter, lint and hair like magic! Yet it purrs so quietly it won't awaken a sleeping baby. Best of all, FILTER QUEEN has no dirty bag to empty. It's the really different vacuum that cleans faster... easier... and helps safeguard your family's health! See it at your neighborhood dealer. Write today for free picture booklet that tells how to save hours of
+        cleaning time and loads of work.</p>
+    </div>
+    <div class="cleanfloors">
+      <p><h1>KEEPS FLOORS CLEANER</h1>
+        You'll LOVE this new kind of vacuum! MUCH less noise. MUCH easier to use. Powerful suction that quickly reaches tramped-in dirt... makes rugs and floors cleaner and safer from children to use as their playground.</p>
+    </div>
+    <div class="attachmenttext"><p><h1>ATTACHMENT HOLDER OPTIONAL</h1>
+        My FILTER QUEEN cleans from floor to ceiling, too! Marvelous, easy-to-get-on-and-off attachments. Dusts floors and furniture. Sprays wax, shampoos rugs, controls moths. Even dries hair and filers room air! And still more attachments for cleaning upholstery, drapes, blinks and moldings! What a vacuum!</p>
+    </div>
+
+
+    <nav id="nodust"><img src="images/icon-outside.png" width="120"></nav>
+    <nav id="nobag"><img src="images/icon-inside.png" width="120"></nav>
+    <nav id="wastebasket"><img src="images/icon-wastebasket.png" width="140"></nav>
+    <nav id="family"><img src="images/scene.png" width="300"></nav>
+    <nav id="attachment"><img src="images/filterqueen.png" width="200" height="120"></nav>
+    <nav id="logo"><img src="images/logo.png" width="400" height="200"></nav>
+    <nav id="guarantee"><img src="images/guarantee.png" width="100" height="50"></nav>
+
+    <div class="box1"><nav id="boxtext">
+      Health MOR, Inc.<br/>
+      203 N. Wabash Ave.<br/>
+      Chicago 1, Illinois<br/>
+      <br/>
+      Please send the Filter Queen picture book and the name of my nearest dealer.
+      <br/>
+      NAME:___________________________________________________________<br/>
+      ADDRESS:________________________________________________________<br/>
+      CITY:_______________________________STATE:_______________________
+    </nav></div>
+
 
   </body>
 </html>
